<resources>
    <string name="app_name">MyNotes</string>
    <string name="title_home">Home</string>
    <string name="title_notes">Notes</string>
    <string name="title_profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="btn_login">Login</string>
    <string name="offer_signup">Don\'t have an account?</string>
    <string name="offer_login">Already have an account?</string>
    <string name="btn_signup">Signup</string>
    <string name="username">Username</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="change_language">Change Language</string>
    <string name="logout">Logout</string>
    <string name="empty_data">Empty Data</string>
    <string name="title">Title</string>
    <string name="note">Note</string>
    <string name="btn_add_notes">Add Notes</string>
    <string name="date_created">Create at: </string>
    <string name="data_updated">Update at: </string>
    <string name="update_note">Update Note</string>
    <string name="btn_update_notes">Update</string>
</resources>